tests/NormalTests/paczka1/small_fuzzy/63620800.err
Error in line 2: chtxXv A214 40,4
Error in line 6: zg6W9 A214 44,2
Error in line 7: zg6W9 S709 26,9
